updated some name tags to allow dummy session data js, added in js for dummy session data for renewal upper tier and registration upper and lower tier

--- a/app/views/v1/pages/privacy.html
+++ b/app/views/v1/pages/privacy.html
@@ -56,7 +56,7 @@ About - GOV.UK Prototype Kit
 
        <h2 class="govuk-heading-m">How long we keep your personal data</h2>
 
-        <p>Personal data in an upper-tier registration is kept for 7 years after a registration has ended.
+        <p>Personal data in an upper tier registration is kept for 7 years after a registration has ended.
         </p>
        
         <p>Lower-tier registrations are non-expiring, and personal data is retained unless you request it is removed. To request that your personal data is removed, please contact the Environment Agency helpline on 03708 506 506.
