--- a/app/views/v1/your-registration/registration-type.html
+++ b/app/views/v1/your-registration/registration-type.html
@@ -49,14 +49,14 @@ What kind of registration do you need?
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="upper-tier">
+                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="upperTier">
                       <label class="govuk-label govuk-radios__label" for="tier-2">
                         I need an upper tier registration
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="lower-tier">
+                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="lowerTier">
                       <label class="govuk-label govuk-radios__label" for="tier-3">
                         I need a lower tier registration
                       </label>
