--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -55,10 +55,13 @@ Waste carrier prototype
           </ul>
 
           <h3 class="govuk-heading-s">
-            Registration - full build in progess
+            Registration - limited company only
           </h3>
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/your-registration/start-page">WCR registration</a></li>
+            <li><a href="/{{versionxxx}}/your-registration/start-page">WCR registration from the start page</a></li>
+            <li><a href="/upper-tier-reg">Upper tier registration from check your answers with dummy data</a></li>
+            <li><a href="/lower-tier-reg">Lower tier registration from check your answers with dummy data</a></li>
+            <li><a href="/upper-tier-renewal">Renewal from check you answers with dummy data</a></li>
           </ul>
           
 
