--- a/app/views/v1/your-registration/choose-country.html
+++ b/app/views/v1/your-registration/choose-country.html
@@ -56,36 +56,36 @@
               <div class="govuk-radios">
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-                      <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                      <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                         England
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="wales">
-                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                      <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="wales">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                         Wales
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="scotland">
-                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                      <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="scotland">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
                         Scotland
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+                      <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
                         Northern Ireland
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="not-uk">
-                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+                      <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="not-uk">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
                         Not in the United Kingdom
                       </label>
                     </div>
