updated cya page back link to work, and further formatting for list tidy up on index page for v1

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -55,13 +55,16 @@ Waste carrier prototype
           </ul>
 
           <h3 class="govuk-heading-s">
-            Registration - limited company only
+            Registration (limited company only)
           </h3>
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="/{{versionxxx}}/your-registration/start-page">WCR registration from the start page</a></li>
-            <li><a href="/upper-tier-reg">Upper tier registration from check your answers with dummy data</a></li>
-            <li><a href="/lower-tier-reg">Lower tier registration from check your answers with dummy data</a></li>
-            <li><a href="/upper-tier-renewal">Renewal from check you answers with dummy data</a></li>
+          </ul>
+          <p style="font-weight: bold;">Dummy data links to check your answers</p>
+          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="/upper-tier-reg">Upper tier registration</a></li>
+            <li><a href="/lower-tier-reg">Lower tier registration</a></li>
+            <li><a href="/upper-tier-renewal">Renewal</a></li>
           </ul>
           
 
