--- a/app/views/v1/your-registration/cya.html
+++ b/app/views/v1/your-registration/cya.html
@@ -55,7 +55,7 @@ Check your answers
 
 
 <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
+  <a href="javascript:history.back();" class="govuk-back-link">Back</a>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
