session data links in index page for payment flows and magic link, and js in routes for data

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -37,21 +37,13 @@ Waste carrier prototype
           <h2 class="govuk-heading-m">
             Current research
           </h2>
-          <h3 class="govuk-heading-s">
-            Letters
-          </h3>
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link-v2.pdf" target="_blank" download="Renewal letter magic link v2">Renewal letter magic link v2</a> </li>
-          </ul>          
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code-v2.pdf" target="_blank" download="Renewal letter QR v2">Renewal letter QR v2</a> </li>
-          </ul>     
+      
 
           <h3 class="govuk-heading-s">
-            Renewal magic link - inc first 6 pages
+            Upper tier renewal magic link
           </h3>
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/{{versionxxx}}/wcr-magic-link/email-renew" target="_blank">WCR magic link renewal</a> </li>
+            <li><a href="/magic" target="_blank">WCR magic link renewal</a> </li>
           </ul>
 
           <h3 class="govuk-heading-s">
@@ -69,34 +61,30 @@ Waste carrier prototype
           
 
           <h3 class="govuk-heading-s">
-            Payment flows
+            Dummy data links to payment flows
           </h3>
 
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/your-registration/done/worldpay-confirm">WCR renewal card payment receipt, from 'done' page</a></li>
-          </ul>
-
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/your-registration/pay/choose-payment">BACS renewal from payment summary</a></li>
+            <li><a href="/renewal-confirm-page">WCR renewal card payment receipt, from 'done' page</a></li>
+            <li><a href="/renewal-choose-payment">BACS renewal from payment summary</a></li>
           </ul>
           
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <!-- ########################################################################### -->
     
-          <h2 class="govuk-heading-m">
-            Previous letter versions
-          </h2>
-
-          <h3 class="govuk-heading-s">
-Version 1          </h3>
+          <h2 class="govuk-heading-m">Letters</h2>
+          <h3 class="govuk-heading-s">Version 2</h3>
+          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link-v2.pdf" target="_blank" download="Renewal letter magic link v2">Renewal letter magic link</a> </li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code-v2.pdf" target="_blank" download="Renewal letter QR v2">Renewal letter QR</a> </li>
+          </ul>     
+          <h3 class="govuk-heading-s">Version 1</h3>
 
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link</a></li>
-          </ul>
-          <ul class="govuk-list govuk-list--bullet">    
+
             <li><a href="https://waste-carriers.herokuapp.com/public/images/redirect.pdf" target="_blank" download="Renewal letter redirect">Renewal letter redirect</a> </li>
-          </ul>
-          <ul class="govuk-list govuk-list--bullet"> 
+
             <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code.pdf" target="_blank" download="Renewal letter redirect and QR cod">Renewal letter redirect and QR code</a></li>
           </ul>
 
