--- a/app/views/v1/wcr-magic-link/bacs-email.html
+++ b/app/views/v1/wcr-magic-link/bacs-email.html
@@ -63,7 +63,8 @@
           <div id="email_text">
 
       </br>
-<p>Dear Chris Jones,</p>
+      <p>{{permit.contactFirstName}} 
+        {{permit.contactLastName}}</p>
         <h1 class="govuk-heading-m">
           You need to pay for your waste carriers registration and then email us to confirm payment
         </h1>
