--- a/app/views/v1/wcr-magic-link/email-receipt.html
+++ b/app/views/v1/wcr-magic-link/email-receipt.html
@@ -71,7 +71,8 @@
           <div id="email_text">
 
       </br>
-<p>Dear Chris Jones,</p>
+      <p>{{permit.contactFirstName}} 
+        {{permit.contactLastName}}</p>
         <h1 class="govuk-heading-m">
           Your payment has been received
         </h1>
