--- a/app/views/v1/your-registration/comp-address.html
+++ b/app/views/v1/your-registration/comp-address.html
@@ -59,8 +59,8 @@ What's the company address?
 <legend id="manual-address" class="govuk-visually-hidden">Site address</legend>
 
 <div class="govukform-group">
-  <label class="govuk-label" for="the_address">Address</label>
-  <select class="govuk-select form-control form-control-char-auto" id="the_address" aria-describedby="manual_hint" name="compAddress">
+  <label class="govuk-label" for="compAddress">Address</label>
+  <select class="govuk-select form-control form-control-char-auto" id="compAddress" aria-describedby="manual_hint" name="compAddress">
     <option value="">15 addresses found</option>
     <option value="3, GRANGE ROAD, BRISTOL">3, GRANGE ROAD, BRISTOL, BS1 5AH</option>
     <option value="5, GRANGE ROAD, BRISTOL">5, GRANGE ROAD, BRISTOL, BS1 5AH</option>
