--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -130,7 +130,7 @@ What type of business or organisation are you?
         </details>
 
         <p class="govuk-body">
-          We’ve sent an email to jane.applicant@email.com with your payment details and instructions.
+          We’ve sent an email to {{permit.contactEmail}} with your payment details and instructions.
         </p>
         <p class="govuk-body">
           We will also send a receipt to the same email address once payment is processed.
