--- a/app/views/v1/your-registration/done/worldpay-confirm.html
+++ b/app/views/v1/your-registration/done/worldpay-confirm.html
@@ -41,7 +41,7 @@ What type of business or organisation are you?
           </div>
         </div>
 
-        <p>We’ve sent a registration confirmation and certificate to user@example.com.</p>
+        <p>We’ve sent a registration confirmation and certificate to {{permit.contactEmail}}.</p>
         <p> We will also send a receipt to the same email address once your payment has processed.</p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
