updating for receipt email design update

--- a/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
+++ b/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
@@ -78,8 +78,7 @@
 
         <p>A separate email will confirm your registration.</p>
         <p>You’re not legally entitled to operate as a waste carrier until we have confirmed your registration.</p>
-        <p>Download the email attachment for a print version of the receipt.
-          </p>
+        <p>Download the email attachment for a print version of the receipt.</p>
         <h2 class="govuk-heading-s">Receipt:</br>
       </h2>
       <p>Receipt for registration as a waste carrier, broker or dealer
