--- a/app/views/v1/wcr-magic-link/bacs-email.html
+++ b/app/views/v1/wcr-magic-link/bacs-email.html
@@ -16,6 +16,10 @@
 
 {% block main %}
 
+{% set appType = 'receiptEmail' %}
+{% if permit.receiptEmail=="null" %}
+    {% set appType = 'defaultEmail' %}
+{% endif %}
 
 <div id="email">
 
@@ -115,7 +119,11 @@
 
             <p>Email us at  <a href="mailto:ea_fsc_ar@gov.sscl.com">ea_fsc_ar@gov.sscl.com</a> </p>
             <p>When you email us, include the date you paid, the amount and the payment reference CBDU130776.</p>
-            <p>We will send a receipt to you on this email address after payment has been received.</p>
+            {% if permit.receiptEmail=="" %}
+            <p>We will also send a receipt to {{permit.contactEmail}} after we process your payment.</p>
+            {% else %}
+            <p> We will also send a receipt to {{permit.receiptEmail}} after we process your payment.</p>
+            {% endif %}
             <p>Allow 5 working days for your payment to reach us.</p>
             <p>You’re not legally entitled to operate as a waste carrier until we have received your payment and confirmed your registration.</p>
             <p>If any of your details change you must update your registration within 28 days.</p>
