--- a/app/views/v1/your-registration/pay/receipt-email.html
+++ b/app/views/v1/your-registration/pay/receipt-email.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Order registration cards if you need them
+Where should we send payment receipts?
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
@@ -21,31 +21,26 @@ Order registration cards if you need them
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="/{{folder}}/your-registration/pay/receipt-email" method="post">
+      <form action="/{{folder}}/your-registration/pay/choose-payment" method="post">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-0">
-                Order registration cards if you need them
+                Where should we send payment receipts?
               </h1>
             </legend>
            
-            <p>We’ll send you a waste carrier registration certificate with your registration details. You can print it out to show you are registered.</p>
-            <p>You can also buy wallet-sized registration cards for £5 each.</p>
-          </br>
+            <p>We will send all receipts for payment to this address once the payment has been processed.</p>
 
-            <img src="/public/images/copyCard.jpg" alt="Copy Card">
-          </br>
-
+            <p>If you leave this blank, we will send receipts to the contact email, {{permit.contactEmail}}</p>
             <div class="govuk-form-group">
             </br>
 
-              <label class="govuk-label" for="address-line-1">
-                Number of cards at £5 each 
+              <label class="govuk-label" for="receiptEmail">
+                Email address
               </label>
-              <input class="govuk-input govuk-input--width-5" id="address-line-1" name="address-line-1" type="text">
+              <input class="govuk-input govuk-!-width-one-half" id="receiptEmail" name="receiptEmail" type="text">
             </div>
 
-            <p>The total cost for your registration will be shown on the next page.</p>
             <button class="govuk-button" data-module="govuk-button">
                 Continue
               </button>
