--- a/app/views/v1/your-registration/choose-country.html
+++ b/app/views/v1/your-registration/choose-country.html
@@ -18,6 +18,17 @@
 <a href="javascript:history.back();" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
+{% set appType = 'started' %}
+{% if permit.started=="yes" %}
+    {% set appType = 'yes' %}
+{% endif %}
+{% set appType = 'started' %}
+{% if permit.started=="no" %}
+    {% set appType = 'no' %}
+{% endif %}
+
+
+{# permit|dump #}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -55,13 +66,22 @@
                 </legend>-->
               <div class="govuk-radios">
 
+                    {% if permit.whereDoYouLive=="england" %}
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england" checked="checked">
+                      <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                        England
+                      </label>
+                    </div>
+                    {% else %}
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
                       <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                         England
                       </label>
                     </div>
-
+                   {% endif %}
+                    
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="wales">
                       <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
