--- a/app/views/v1/your-registration/comp-no.html
+++ b/app/views/v1/your-registration/comp-no.html
@@ -19,7 +19,16 @@ What's the registration number of the company?
 {% endblock %}
 {% block content %}
 
+{% set appType = 'started' %}
+{% if permit.started=="yes" %}
+    {% set appType = 'yes' %}
+{% endif %}
+{% set appType = 'started' %}
+{% if permit.started=="no" %}
+    {% set appType = 'no' %}
+{% endif %}
 
+{# permit|dump #}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -40,7 +49,16 @@ What's the registration number of the company?
             </label>
             <p class="govuk-hint">An 8 digit number, or 2 letters followed by a 6 digit number</p>
 
+          {% if permit.companyNumber=="10659975" %}
+
+          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text" value="10659975">
+
+          {% else %}
+
           <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text">
+
+          {% endif %}
+
         </div>
       
       </fieldset>
